--- a/estilo/style.css
+++ b/estilo/style.css
@@ -34,7 +34,7 @@ nav {
     background-color: #191970;
 }
 
-nav > a {
+nav > h1 {
     text-decoration: none;
     color: #FFFFFF;
     font-weight: 800;
@@ -49,6 +49,7 @@ nav ul {
     list-style: none;
     padding: 0;
     width: 100%;
+    box-sizing: border-box;
 }
 
 nav ul li {
@@ -63,6 +64,12 @@ nav ul li a {
     width: 100%;
     text-decoration: none;
     color: #FFFFFF;
+}
+
+nav > ul > li > a:hover {
+    border-radius: 5px;
+    transition: 1.s;
+    font-size: 17px;
 }
 
 /* cabeçalho */
@@ -140,7 +147,7 @@ section h2 {
 
 
 #linguagens img {
-    height: 170px;
+    height: 150px;
     padding: 5px;
 }
 
@@ -152,7 +159,7 @@ figure h2 {
 }
 
 #fotos img {
-    max-width: 480px;
+    max-width: 460px;
     margin: 10px;
     padding: 10px;
 }
